# maki

./: .gitignore  ANALISI_CRITICITA.md  CHANGELOG.md  README.md  REASONING_ANALYSIS.md  TESTING.md  __init__.py  demo_reasoning.py  pyproject.toml  requirements.txt  setup.py  test_compatibility.py  test_logging.py  test_makiLLama_unittest.py  test_reasoning_enhancements.py
.github/workflows/: python-package.yml
docs/: DISTRIBUTED_PLAN.md  IDEAS_startup_investor_report.md  PLAN_openai_anthropic_backends.md
examples/: example_usage.py
maki/: __init__.py  __main__.py  agents.py  backend.py  config.py  connector.py  exceptions.py  logging_config.py  maki.py  makiAnthropic.py  makiHG.py  makiLLama.py  makiOpenAI.py  maky.py  objects.py  session.py  urls.py  utils.py
maki/agents/: __init__.py  agent.py  agent_manager.py  agents.py  plugin_handler.py  protocols.py  reasoning.py  workflow.py
maki/distributed/: __init__.py  circuit_breaker.py  config_loader.py  proxy.py  registry.py  server.py  state_store.py
maki/examples/: __init__.py  agent_example.py  demo_reasoning.py  ollama_examples.py  test.py  verify_refactor.py
maki/llm_objects/: __init__.py  ollama_payload.py
maki/plugins/: __init__.py  _web_utils.py
maki/plugins/alpaca_data/: README.md  __init__.py  alpaca_data.py  example_usage.py  test_alpaca_data.py
maki/plugins/alpaca_news/: README.md  __init__.py  alpaca_news.py  example_usage.py  test_alpaca_news.py
maki/plugins/alpaca_stream/: README.md  __init__.py  alpaca_stream.py  example_usage.py  test_alpaca_stream.py
maki/plugins/alpaca_trading/: README.md  __init__.py  alpaca_trading.py  example_usage.py  test_alpaca_trading.py
maki/plugins/directory_reader/: README.md  __init__.py  directory_reader.py  example_usage.py  test_directory_reader.py
maki/plugins/file_reader/: README.md  __init__.py  example_usage.py  file_reader.py  test_file_reader.py
maki/plugins/file_writer/: README.md  __init__.py  example_usage.py  file_writer.py  test_file_writer.py
maki/plugins/ftp_client/: README.md  __init__.py  example_usage.py  ftp_client.py  test_ftp_client.py
maki/plugins/image_classifier/: README.md  __init__.py  example_usage.py  image_classifier.py  test_image_classifier.py
maki/plugins/json_reader/: README.md  __init__.py  example_usage.py  json_reader.py  test_json_reader.py
maki/plugins/media_search/: README.md  __init__.py  example_usage.py  media_search.py  test_media_search.py
maki/plugins/obsidian_memory/: README.md  __init__.py  example_usage.py  obsidian_memory.py  test_obsidian_memory.py
maki/plugins/ocr/: README.md  __init__.py  example_usage.py  ocr.py  test_ocr.py
maki/plugins/ocr/backends/: __init__.py  base.py  docx_backend.py  image_backend.py  llm_backend.py  pdf_backend.py  xlsx_backend.py
maki/plugins/provider_updates/: README.md  __init__.py  example_usage.py  provider_updates.py  test_provider_updates.py
maki/plugins/rag_memory/: README.md  __init__.py  example_usage.py  rag_memory.py  test_rag_memory.py
maki/plugins/rag_memory/backends/: __init__.py  base.py  chroma.py  faiss_local.py  memory_numpy.py  pgvector.py  qdrant.py
maki/plugins/trend_search/: README.md  __init__.py  example_usage.py  test_trend_search.py  trend_search.py
maki/plugins/web_search/: README.md  __init__.py  example_usage.py  test_web_search.py  web_search.py
maki/plugins/web_to_md/: README.md  __init__.py  example_usage.py  test_web_to_md.py  web_to_md.py
maki/test/: test_agent_fixes.py  test_agent_functionality.py  test_agent_proxy.py  test_agent_server.py  test_async_rate_limiter.py  test_backend_hierarchy.py  test_backend_interface.py  test_concurrency.py  test_config_loader.py  test_config_usage.py  test_connector.py  test_consistency_sweep.py  test_conversation_memory.py  test_distributed_workflow.py  test_enhanced_workflow.py  test_error_handling.py  test_hardening.py  test_history_cleanup.py  test_logging.py  test_makiAnthropic.py  test_makiLLama.py  test_makiLLama_unittest.py  test_makiOpenAI.py  test_maki_functionality.py  test_mixin_contracts.py  test_native_tools.py  test_newsletter_pipeline.py  test_newsletter_publish.py  test_plugin_structure.py  test_security.py  test_serialization.py  test_session.py  test_ssrp_protection.py
maki_newsletter/: README.md  config.py  generate.py  main.py  pipeline.py  publish.py  resume.py
test/: test_ssrp_protection.py
