[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maki"
version = "0.1.0"
authors = [
  {name="Bowl of Data", email="bowlofdata@gmail.com"},
]
description = "A Python framework for multi-agent LLM interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "paramiko>=2.11.0",
    "httpx>=0.23.0",
    "PySide6>=6.7.0",
    "feedparser>=6.0",
    "readability-lxml>=0.8",
    "html2text>=2020.1.16",
    "pytrends>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]
[project.scripts]
maki = "maki.__main__:main"
maki-gui = "maki_gui.app:run"
maki-newsletter = "maki_newsletter.main:main"
maki-newsletter-generate = "maki_newsletter.generate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["maki*", "maki_gui*"]

[tool.setuptools.package-data]
"maki_gui" = ["ui/qml/*.qml"]
