[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maki"
version = "0.1.1"
authors = [
  {name="Bowl of Data", email="bowlofdata@gmail.com"},
]
description = "A Python framework for multi-agent LLM interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "paramiko>=2.11.0",
    "httpx>=0.23.0",
    "PySide6>=6.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.20",
]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
]
[project.scripts]
maki = "maki.__main__:main"
maki-gui = "maki_gui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["maki*", "maki_gui*"]
exclude = ["maki_newsletter*"]

[tool.setuptools.package-data]
"maki_gui" = ["ui/qml/*.qml"]
