[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maki"
version = "0.2.0"
authors = [
  {name="Bowl of Data", email="bowlofdata@gmail.com"},
]
description = "A Python framework for multi-agent LLM interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21",
    "black>=21.0",
    "flake8>=3.8",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.20",
]
distributed = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
]
distributed-redis = [
    "redis>=4.5",
]
gui = [
    "PySide6>=6.7.0",
]
ftp = [
    "paramiko>=2.11.0",
]
web = [
    "feedparser>=6.0",
    "readability-lxml>=0.8",
    "html2text>=2020.1.16",
]
trends = [
    "pytrends>=4.9.0",
]
alpaca = [
    "alpaca-py>=0.43.0",
    "feedparser>=6.0",
]
all = [
    "maki[openai,anthropic,distributed,distributed-redis,gui,ftp,web,trends,alpaca]",
]

[project.scripts]
maki = "maki.__main__:main"
maki-gui = "maki_gui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["maki*", "maki_gui*"]
exclude = ["maki_newsletter*"]

[tool.setuptools.package-data]
"maki_gui" = ["ui/qml/*.qml"]
